WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286365
Sample panels on
https://colorsublime.github.io
are missing the black background until click
https://bugs.webkit.org/show_bug.cgi?id=286365
Summary
Sample panels on https://colorsublime.github.io are missing the black backgro...
Antti Koivisto
Reported
2025-01-22 09:50:04 PST
- go to
https://colorsublime.github.io/themes/1337/
- reload
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2025-01-22 09:50:38 PST
rdar://137988602
Antti Koivisto
Comment 2
2025-01-22 10:21:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39388
EWS
Comment 3
2025-01-22 11:30:33 PST
Committed
289250@main
(889be9a8450b): <
https://commits.webkit.org/289250@main
> Reviewed commits have been landed. Closing PR #39388 and removing active labels.
WebKit Commit Bot
Comment 4
2025-01-28 05:28:20 PST
Re-opened since this is blocked by
bug 286617
Antti Koivisto
Comment 5
2025-01-28 08:32:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39621
EWS
Comment 6
2025-01-28 10:19:22 PST
Committed
289457@main
(431aa8dced21): <
https://commits.webkit.org/289457@main
> Reviewed commits have been landed. Closing PR #39621 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug