Sample panels on https://colorsublime.github.io are missing the black background until click https://bugs.webkit.org/show_bug.cgi?id=286365 rdar://137988602

Reviewed by Simon Fraser.

Fast-path inheritance can not be used if the current style has explicitly inherited properties.

* LayoutTests/fast/css/fast-path-explicit-inherit-expected.html: Added.
* LayoutTests/fast/css/fast-path-explicit-inherit.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::nonInheritedEqual const):

Add comparison for non-inherited properties.

* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/SVGRenderStyle.cpp:
(WebCore::SVGRenderStyle::operator== const):
(WebCore::SVGRenderStyle::nonInheritedEqual const):
* Source/WebCore/rendering/style/SVGRenderStyle.h:
* Source/WebCore/style/StyleChange.cpp:
(WebCore::Style::determineChange):
* Source/WebCore/style/StyleChange.h:

Add a new style change type for when a fast-path property and a non-inherited property both change.

* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::computeDescendantsToResolve const):
(WebCore::Style::TreeResolver::determineResolutionType):

In that case we also need to check if the style has had any explicitly inherited properties applied and
not use the fast path if so.

Canonical link: https://commits.webkit.org/289457@main